@@ -12,8 +12,9 @@ my @paths = (
 
 is-deeply coverable-files(@paths), Map.new(
   @paths[0] => (1,4,5,6,7),
-  @paths[1] => (3,5,6,9,10,11,12,13,14,15,18,19,20,24,26,27,29,30,31,32,33),
-  @paths[2] => (1,3,5,7,8,9,10,11,13,14,15,16,17),
+  @paths[1] => (1,3,5,6,9,10,11,12,15,16,17,18,21,24,25,26,27,28,29,30,
+                33,34,35,39,41,42,44,45,46,47,48,50,51,53),
+  @paths[2] => (1,3,5,7,8,9,10,11,13,14,15,16,17,18),
 ), 'are all expected lines seen';
 
 # vim: expandtab shiftwidth=4
