@@ -1,0 +1,26 @@
+use Test;
+
+use Code::Coverable;
+
+# All (in)direct dependencies that should be installed
+my @identities = <
+  Identity::Utils MoarVM::Bytecode String::Utils Test
+>;
+my @min-elems = 130,560,220,460;  # heuristic
+
+plan +@identities;
+
+my %map := coverable-files(@identities);
+
+my @keys = @identities.map: {
+    %map.keys.first: *.ends-with("($_)")
+}
+
+for @identities.kv -> $index, $identity {
+    my $key       = @keys[$index];
+    my $min-elems = @min-elems[$index];
+    my $elems     = %map{$key}.elems;
+    ok $elems > $min-elems, "$elems > $min-elems for '$identity'";
+}
+
+# vim: expandtab shiftwidth=4
